tests/negative/test_switch_case_expr_bad_type.orb
fnc main() {
    let u32 x = 100;
    switch (x) {
    case -1:
        ret;
    }
}